--- a/theBrewmaster/pom.xml
+++ b/theBrewmaster/pom.xml
@@ -6,13 +6,13 @@
     <groupId>brewmaster</groupId>
     <artifactId>theBrewmaster</artifactId> <!--Keep a note of this one: this is the ID used in the "auto add cards" method-->
     <name>The Brewmaster</name>
-    <version>0.0.1</version>
-    <description>A default base to start your own mod from.</description>
+    <version>0.1.0</version>
+    <description>The Brewmaster Character Mod</description>
 
     <properties>
         <maven.compiler.source>1.8</maven.compiler.source>
         <maven.compiler.target>1.8</maven.compiler.target>
-        <SlayTheSpire.version>01-23-2019</SlayTheSpire.version>
+        <SlayTheSpire.version>01-18-2022</SlayTheSpire.version>
         <ModTheSpire.version>3.8.0</ModTheSpire.version>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <!--CHANGE THIS TO YOUR STEAM INSTALLATION-->
